--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "typescript": "^4.1.6"
+    "sass": "^1.69.5",
+    "typescript": "^4.1.6",
+    "web-vitals": "^2.1.4"
   },
   "overrides": {
     "react-scripts": {
@@ -23,8 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint --ext .ts --ext .tsx src/**",
-    "eslint:fix": "eslint --fix --ext .ts --ext .tsx src/**",
+    "eslint": "eslint --ext .ts --ext .tsx src/**/*.tsx src/**/*.ts",
+    "eslint:fix": "eslint --fix --ext .ts --ext .tsx src/**/*.tsx src/**/*.ts",
     "test:nowatch": "react-scripts test --watchAll=false",
     "prepare": "husky install",
     "prepublish": "npm run eslint:fix"
